[package]
name = "dayseam-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Dayseam desktop shell (Tauri 2)."

[lib]
name = "dayseam_desktop"
path = "src/lib.rs"

[[bin]]
name = "dayseam-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }
tracing = { workspace = true }
# DAY-115/SF-1. Without a subscriber every `tracing::error!` /
# `warn!` / `info!` written anywhere in the process — including the
# panic-capture log in `dayseam_core::runtime::supervised_spawn` —
# goes to the null dispatcher. That silently reinstated F-10 even
# though DAY-113 added the panic-capture scaffolding, because the
# desktop binary never installed a subscriber. `tracing_init::init`
# wires one up at startup before any other Tauri plugin can log.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# DAY-149: `tray-icon` feature enables `TrayIconBuilder` and the
# `app.tray_by_id()` manager so the hide-on-close background mode has
# a menu-bar affordance to bring the main window back. The feature is
# cross-platform in Tauri 2 but only actually renders on the
# platforms that support it (macOS menu bar, Windows system tray,
# Linux AppIndicator); running without a tray is still safe because
# `TrayIconBuilder::build(&app)` returns a `Result` and we log + skip
# on error rather than failing boot.
#
# DAY-170 adds `image-png` so `tauri::include_image!` can decode the
# coloured-strands tray PNG at compile time and embed it in the
# binary. Without the feature the macro expands to a call against
# `Image::from_bytes`, which only exists when `image-png` or
# `image-ico` is on; PNG is the format we ship the tray raster in.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
dayseam-core = { path = "../../../crates/dayseam-core" }
dayseam-db = { path = "../../../crates/dayseam-db" }
dayseam-events = { path = "../../../crates/dayseam-events" }
dayseam-secrets = { path = "../../../crates/dayseam-secrets", features = ["keychain"] }
dayseam-orchestrator = { path = "../../../crates/dayseam-orchestrator" }
dayseam-report = { path = "../../../crates/dayseam-report" }
# DAY-170. The scheduler's catch-up planner now also treats "a saved
# report file for date D in a markdown-file sink" as satisfaction
# for D, so the planner never nags the user with a catch-up prompt
# for a day whose report is already sitting on disk. We pull in the
# sink crate purely for `report_filename_for_date` so the naming
# convention has a single source of truth — the scheduler task does
# not instantiate the sink adapter.
sink-markdown-file = { path = "../../../crates/sinks/sink-markdown-file" }
connectors-sdk = { path = "../../../crates/connectors-sdk" }
connector-local-git = { path = "../../../crates/connectors/connector-local-git" }
connector-gitlab = { path = "../../../crates/connectors/connector-gitlab" }
# DAY-82. Used by `ipc::atlassian` for the one-shot credential probe
# (`discover_cloud`) and for the self-identity seed that lands
# alongside each new `sources` row. The full Jira / Confluence
# connectors are registered through the orchestrator registry, not
# directly here.
connector-atlassian-common = { path = "../../../crates/connectors/connector-atlassian-common" }
# DAY-84 / DOG-v0.2-02. `startup::resolve_registry_config` and
# `ipc::atlassian::atlassian_sources_add` need to build
# `Jira|Confluence SourceCfg`s from each persisted row so the
# orchestrator's `JiraMux` / `ConfluenceMux` both (1) hydrates the
# row at boot and (2) upserts the row the moment the dialog writes
# it. v0.2.0 registered both muxes empty and only ever populated
# them via boot, which bricked `report_generate` between an Add
# Source and the next app restart.
connector-jira = { path = "../../../crates/connectors/connector-jira" }
connector-confluence = { path = "../../../crates/connectors/connector-confluence" }
connector-github = { path = "../../../crates/connectors/connector-github" }
connector-outlook = { path = "../../../crates/connectors/connector-outlook" }
# Cross-platform "open this URL in the default handler" helper. Kept
# as a direct dep of the desktop crate (not the workspace) because
# only the Tauri shell ever needs to shell out to the OS opener — the
# orchestrator and connectors stay pure.
opener = "0.7"
url = "2"
# DAY-201 PR #2. `generate_pkce_pair` in `connectors-sdk` takes a
# caller-supplied `RngCore`; the Tauri-side OAuth login driver passes
# `rand::thread_rng()` so the PKCE verifier bytes come from the OS
# CSPRNG. Kept at a direct dep (not transitive) so the import is
# visible in this crate's Cargo tree and the version stays pinned at
# the same major as the rest of the workspace's rng-using crates.
rand = "0.8"
# DAY-201 PR #2. The OAuth loopback driver stores a cloned
# `reqwest::Client` handle it borrows from `AppState::http` so the
# PKCE token-exchange hop reuses the same connection pool, user-agent,
# and TLS stack the rest of the app uses. The crate is already in
# the workspace graph transitively via `connectors-sdk`; listing it
# as a direct dep keeps the type reference honest in this crate's
# Cargo tree. Feature flags mirror `connectors-sdk`'s so there is no
# accidental second reqwest copy with a different TLS backend.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true }
# `IpcSecretString` zeroes PAT bytes on drop so a dropped dialog (or a
# command that returns an error) cannot leave the PAT living in the
# freed IPC buffer until whatever writes over it next. The
# `zeroize_derive` feature is off here; the one use-site writes the
# `Drop` impl by hand.
zeroize = { version = "1" }
# Native folder/file picker — fronts the shell's directory chooser so
# users can select scan roots in `AddLocalGitSourceDialog` instead of
# pasting absolute paths. We pair this with `dialog:allow-open` in
# `capabilities/default.json`; nothing else in the plugin is exposed.
tauri-plugin-dialog = "2"
# DAY-108. In-app auto-updater backed by GitHub Releases. The plugin
# handles the Ed25519 signature verification on downloaded DMGs
# against `plugins.updater.pubkey` in `tauri.conf.json`; its scoped
# permissions live in `capabilities/updater.json` (separate from
# `default.json` so the updater grant is an audit-friendly single
# file). The matching frontend binding is
# `@tauri-apps/plugin-updater`, invoked via `src/features/updater/
# useUpdater.ts`. The release workflow pairs this with a
# `tauri signer sign` step and a `latest.json` manifest generator so
# every published DMG is auto-verifiable by an installed v0.6.0+.
tauri-plugin-updater = "2"
# DAY-108. Exposes `relaunch()` to the frontend so `useUpdater` can
# restart the app after `update.install()` completes. `install()` on
# macOS swaps the `.app` bundle in place but does not auto-relaunch
# the current process; without this plugin the user would have to
# quit and reopen Dayseam from the Dock before the new binary ran.
# Paired with `process:allow-relaunch` in `capabilities/updater.json`.
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
# DAY-111 / TST-v0.4-04. Wiremock drives
# `tests/reconnect_rebind.rs`, the end-to-end integration suite for
# the three IPC commands that hit HTTP (`github_validate_credentials`,
# `atlassian_validate_credentials`, and the reconnect-rebind
# self-heal inside `github_sources_reconnect`). Standing the mock up
# at an `http://127.0.0.1:PORT` URL is the only way to exercise the
# full validate → persist → seed-identity chain without a live
# network dependency; the companion `test-helpers` feature below
# relaxes the two IPC URL validators so they accept that scheme in
# tests only. Pinned at 0.6 to match the `connector-github`
# dev-dep used by DAY-110's pagination fixture so a workspace build
# resolves a single `wiremock` version.
wiremock = "0.6"
# DAY-111. The integration suite seeds GitHub / Atlassian source rows
# directly against SQLite to reach the reconnect-rebind self-heal
# code path — bypassing the normal `sources_add` flow keeps each
# scenario focused on a single branch of the IPC under test. We lean
# on `sqlx` for the raw inserts and on `connectors-sdk` so we can
# build an `HttpClient` pointing at the wiremock origin.
connectors-sdk = { path = "../../../crates/connectors-sdk" }
# DAY-123 / T-1. The updater-signature integration suite
# (`tests/updater_signature.rs`) exercises the exact crypto crate
# (`minisign-verify`) that `tauri-plugin-updater` uses internally,
# pairing it with the `minisign` reference implementation for
# in-process keypair generation + signing. Without this pair the
# v0.5 capstone review's T-1 finding stands — the JS-side updater
# tests `vi.mock` the entire `@tauri-apps/plugin-updater` import,
# so the Ed25519 verification path is *only* reachable here. The
# crates share an upstream author (jedisct1) and read/write the
# same wire format, so a sign-here / verify-here round-trip pins
# the same contract a release-time signed DMG goes through inside
# `tauri-plugin-updater`.
minisign = "0.9"
minisign-verify = "0.2"
# Used only by `tests/updater_signature.rs` to base64-decode the
# wrapped pubkey field in `tauri.conf.json` before handing the
# inner key to `minisign-verify`. Pinned at 0.22 to match the
# version `tauri-plugin-updater` already pulls into the lockfile,
# so adding this dev-dep does not introduce a second base64 codegen.
base64 = "0.22"

[features]
# `custom-protocol` wires in Tauri's custom-protocol flag for release
# bundles — unchanged from the scaffold.
custom-protocol = ["tauri/custom-protocol"]
# `dev-commands` compiles in the `dev_*` IPC commands (`dev_emit_toast`,
# `dev_start_demo_run`) used by the frontend test harness and the in-app
# dev tray. It is **off by default** so a plain `cargo build --release`
# or `cargo tauri build` ships a binary with no dev surface and no dev
# capability grant. The build script writes `capabilities/dev.json` only
# when this feature is on; `capabilities/default.json` carries only
# production permissions. Development and CI (including `pnpm tauri dev`)
# re-enable it with `--features dev-commands`.
dev-commands = []
# DAY-111 / TST-v0.4-04. Opt-in scaffolding that external integration
# tests (`tests/reconnect_rebind.rs`) flip on so:
#   1. `parse_api_base_url` / `parse_workspace_url` accept
#      `http://127.0.0.1[:PORT]/…` — the only way a wiremock server
#      can front `GET /user` or `GET /rest/api/3/myself`; and
#   2. `AppState::http_for_tests(...)` compiles so tests can
#      construct an app state that routes every HTTP call through
#      an instant-retry client pointing at the mock origin.
# Production binaries never enable this feature, so neither the
# relaxed URL check nor the test constructor reaches a release build.
# `cargo test --workspace --all-features` flips it on for CI.
test-helpers = []
default = []

# DAY-111 / TST-v0.4-04. `reconnect_rebind.rs` only compiles when the
# `test-helpers` feature is on — the URL validators are
# `https`-loopback strict otherwise, and the test body directly
# references `AppState::with_http_for_test`, which is also
# feature-gated. Listing it under `required-features` is what lets
# `cargo test -p dayseam-desktop --all-features` (CI's default) run
# the suite while plain `cargo test -p dayseam-desktop` keeps
# working — the file is simply skipped in the default feature set
# rather than erroring on the missing symbol.
[[test]]
name = "reconnect_rebind"
path = "tests/reconnect_rebind.rs"
required-features = ["test-helpers"]

# DAY-201 PR #2. `oauth.rs` exercises the full PKCE loopback flow
# against a wiremock token endpoint. It uses the same
# `test-helpers`-gated `AppState::with_http_for_test` hook
# `reconnect_rebind.rs` relies on — feature-gating the file keeps
# `cargo test -p dayseam-desktop` fast while `cargo test
# --workspace --all-features` picks it up in CI.
[[test]]
name = "oauth"
path = "tests/oauth.rs"
required-features = ["test-helpers"]
