[package]
name = "connector-confluence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Confluence Cloud source connector for Dayseam: Basic-auth credential validation, shared Atlassian identity seed, and per-day CQL content walker."

[dependencies]
connector-atlassian-common = { path = "../connector-atlassian-common" }
connectors-sdk = { path = "../../connectors-sdk" }
dayseam-core = { path = "../../dayseam-core" }
dayseam-events = { path = "../../dayseam-events" }

async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
uuid = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
serde_json = { workspace = true }
connector-jira = { path = "../connector-jira" }
tracing-test = "0.2"
