[package]
name = "connector-gitlab"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "GitLab source connector for Dayseam: PAT-authenticated Events API walk, per-day sync, identity match by numeric user id."

[dependencies]
connectors-sdk = { path = "../../connectors-sdk" }
dayseam-core = { path = "../../dayseam-core" }
dayseam-events = { path = "../../dayseam-events" }

async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
uuid = { workspace = true }
# `rustls-tls` keeps us off the host's OpenSSL; `json` enables the
# built-in deserialiser we use when parsing Events API responses.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
cargo_metadata = "0.19"
tokio-util = { version = "0.7", features = ["rt"] }
