[package]
name = "sink-markdown-file"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Dayseam markdown-file sink: atomic write, marker-block contract, Obsidian-friendly filenames."

[dependencies]
sinks-sdk = { path = "../../sinks-sdk", version = "0.0.0" }
dayseam-core = { path = "../../dayseam-core", version = "0.0.0" }

async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
dayseam-events = { path = "../../dayseam-events", version = "0.0.0" }
cargo_metadata = "0.19"
